--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--Connor Shabro, Valerie Remaker, Padma Gundapaneni-->
 <!DOCTYPE html>
 <html>
 
@@ -7,8 +6,6 @@
 <head>
   <meta charset="utf-8">
   <h1>When I say Web you say Development </h1>
-  <h2>Title </h2>  <input id="title" placeholder="untitled"/>
-  <a id="show" href="show.html" target="_blank">view my project </a>
   <title>Web Dev Kiddos </title>
   <link href="index.css" rel="stylesheet"/>
   <script src="index.js"></script>
@@ -42,41 +39,46 @@ function drop(ev) {
     }
 }
   </script>
+  <div id="badBoi">
+    <h2>Title:</h2>  <input id="title" placeholder="untitled"/>
+
+  </div>
+  <a id="show" href="show.html" target="_blank">view my project </a>
 
   <div id="flexy">
     <div id="tools">
         <div id="div1" draggable="false">
           <div draggable="true" ondragstart="drag(event)" class="no" id="h1">
-            <h1> H1 </h1>
+            <h2> H1 </h2>
             <input placeholder="your text"/>
           </div>
           <div draggable="true" ondragstart="drag(event)" class="no" id="h2">
 
-              <h1> H2 </h1>
+              <h2> H2 </h2>
               <input placeholder="your text"/>
             </div>
         <div draggable="true" ondragstart="drag(event)" id="h3" class="no">
-            <h1> H3 </h1>
+            <h2> H3 </h2>
             <input placeholder="your text"/>
           </div>
         <div draggable="true" ondragstart="drag(event)" class="no" id="h4">
-          <h1> H4 </h1>
+          <h2> H4 </h2>
           <input placeholder="your text"/>
         </div>
         <div draggable="true" ondragstart="drag(event)" class="no" id="h5">
-          <h1> H5 </h1>
+          <h2> H5 </h2>
           <input placeholder="your text"/>
         </div>
         <div draggable="true" ondragstart="drag(event)" class="no" id="h6">
-          <h1> H6 </h1>
+          <h2> H6 </h2>
           <input placeholder="your text"/>
         </div>
         <div draggable="true" ondragstart="drag(event)" class="no" id="img">
-          <h1> img </h1>
+          <h2> img </h2>
           <input placeholder="your link from the internet"/>
         </div>
         <div draggable="true" ondragstart="drag(event)" class="no" id="p">
-          <h1> p </h1>
+          <h2> p </h2>
           <input placeholder="your text"/>
         </div>
       </div>
